# jxrlib

./: CMakeLists.txt  Makefile  README.md  jxrlibConfig.cmake.in
common/include/: guiddef.h  wmspecstring.h
doc/: JPEGXR_DPK_Spec_1.0.doc  readme.txt
image/decode/: JXRTranscode.c  postprocess.c  segdec.c  strInvTransform.c  strPredQuantDec.c  strdec.c  strdec_x86.c
image/encode/: segenc.c  strFwdTransform.c  strPredQuantEnc.c  strenc.c  strenc_x86.c
image/sys/: adapthuff.c  ansi.h  common.h  image.c  perfTimer.h  perfTimerANSI.c  strPredQuant.c  strcodec.c  strcodec.h  windowsmediaphoto.h
image/vc11projects/: CommonLib_vc11.vcxproj  DecodeLib_vc11.vcxproj  EncodeLib_vc11.vcxproj
image/x86/: x86.h
jxrencoderdecoder/: JXRDec420.c  JXRDecApp_vc11.vcxproj  JXREncApp_vc11.vcxproj  JxrDecApp.c  JxrEnc420.c  JxrEncApp.c
jxrgluelib/: JXRGlue.c  JXRGlue.h  JXRGlueJxr.c  JXRGlueLib_vc11.vcxproj  JXRGluePFC.c  JXRMeta.c  JXRMeta.h
jxrtestlib/: JXRTest.c  JXRTest.h  JXRTestBmp.c  JXRTestHdr.c  JXRTestLib_vc11.vcxproj  JXRTestPnm.c  JXRTestTif.c  JXRTestYUV.c
